--- a/installwebserverusingvars.yml
+++ b/installwebserverusingvars.yml
@@ -4,21 +4,21 @@
   tasks:
   - name: install webserver(apache2) on ubuntu14
     apt:
-     name: {{"webserveronubuntu"}}
+     name: "{{webserveronubuntu}}"
      state: present
     when: ansible_os_family=="Debian"
   - name: start the service
     service:
-     name: {{"webserveronubuntu"}}
+     name: "{{webserveronubuntu}}"
      state: started
     when: ansible_os_family=="Debian"
   - name: install webserver(apache2) on redhat7
     yum: 
-     name: {{"webserveronredhat"}}
+     name: "{{webserveronredhat}}"
      state: present
     when: ansible_os_family=="RedHat"
   - name: start the service
     service:
-     name: {{"webserveronredhat"}}
+     name: "{{webserveronredhat}}"
      state: started
     when: ansible_os_family=="RedHat"               
