--- a/group_vars/myvar.yml
+++ b/group_vars/myvar.yml
@@ -2,7 +2,7 @@
 - hosts: webservers
   become: yes
   vars: 
-   myvar1: kranthi
+   myvar1: kranthi1
    myvar2: kumar
    myvar3: kyatham
   tasks:  
