--- a/mytominstall/tasks/main.yml
+++ b/mytominstall/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
-# tasks file for myinstall
+# tasks file for mytominstall
 - name: install tomcat
   yum:
    name: tomcat
    state: present
 - name: copy tom config file into all nodes
   template:
-   src: templates:mytomconfig.j2
+   src: templates/mytomconfig.j2
    dest: /usr/share/tomcat/conf/tomcat.conf
   notify: starttomcat
 - name: install admin packages
   yum:
-    name: "{{name}}"
+    name: "{{item}}"
     state: present
   with_items:
     -tomcat-webapps
@@ -21,7 +21,7 @@
     src: templates/mytomuser.j2
     dest: /usr/share/tomcat/conf/tomcat-user.xml
   notify: restarttomcat
-- name: i want to deploy kranthi war file into -tomcat-admin-webapps
+- name: i want to deploy kranthi war file into webapps
   get_url:
    url: http://13.59.183.156:8081/artifactory/kranthikey1/1/target/raviLogin-1.0.war
    dest: /usr/share/tomcat/webapps/raviLogin-1.0.war
