--- a/mytominstall/tasks/main.yml
+++ b/mytominstall/tasks/main.yml
@@ -6,18 +6,18 @@
    state: present
 - name: copy tom config file into all nodes
   template:
-   src: templates/mytomconfig.j2
-   dest: /usr/share/tomcat/conf/tomcat.conf
+    src: templates/mytomconfig.j2
+    dest: /usr/share/tomcat/conf/tomcat.conf
   notify: starttomcat
 - name: install admin packages
   yum:
-    name: "{{item}}"
-    state: present
+   name: "{{item}}"
+   state: present
   with_items:
     -tomcat-webapps
     -tomcat-admin-webapps
 - name: copy tom user file into all nodes
-  tempalte:
+  template:
     src: templates/mytomuser.j2
     dest: /usr/share/tomcat/conf/tomcat-user.xml
   notify: restarttomcat
