file changed again

--- a/mytominstall/tasks/main.yml
+++ b/mytominstall/tasks/main.yml
@@ -4,7 +4,7 @@
   yum:
    name: tomcat
    state: present
-- name: copy tom config file into all nodes
+- name: copy tomconfig file into all nodes
   template:
     src: templates/mytomconfig.j2
     dest: /usr/share/tomcat/conf/tomcat.conf
@@ -16,12 +16,12 @@
   with_items:
     -tomcat-webapps
     -tomcat-admin-webapps
-- name: copy tom user file into all nodes
+- name: copy tomuser file into all nodes
   template:
     src: templates/mytomuser.j2
     dest: /usr/share/tomcat/conf/tomcat-user.xml
   notify: restarttomcat
-- name: i want to deploy kranthi war file into webapps
+- name: i want to deploy kranthi java war file into webapps
   get_url:
    url: http://13.59.183.156:8081/artifactory/kranthikey1/1/target/raviLogin-1.0.war
    dest: /usr/share/tomcat/webapps/raviLogin-1.0.war
