--- a/mytominstall/tasks/main.yml
+++ b/mytominstall/tasks/main.yml
@@ -1,28 +1,32 @@
 ---
-#tasks file for mytominstall
+# tasks file for mytominstall
 - name: install tomcat
   yum:
    name: tomcat
    state: present
-- name: copy tomconfig file into all nodes
+
+- name:  copy tom config file into all nodes
   template:
-    src: templates/mytomconfig.j2
+    src:  templates/mytomconfig.j2
     dest: /usr/share/tomcat/conf/tomcat.conf
   notify: starttomcat
-- name: install admin packages
+
+- name:  Install Admin Packages
   yum:
-   name: "{{item}}"
-   state: present
+    name: "{{item}}"
+    state: present
   with_items:
-    -tomcat-webapps
-    -tomcat-admin-webapps
-- name: copy tomuser file into all nodes
+    - tomcat-webapps
+    - tomcat-admin-webapps
+
+- name: coy tom user file into all nodes
   template:
     src: templates/mytomuser.j2
-    dest: /usr/share/tomcat/conf/tomcat-user.xml
+    dest: /usr/share/tomcat/conf/tomcat-users.xml
   notify: restarttomcat
-- name: i want to deploy kranthi java war file into webapps
+
+- name: i want to deploy ravi java war file into webapps  
   get_url:
-   url: http://13.59.183.156:8081/artifactory/kranthikey1/1/target/raviLogin-1.0.war
-   dest: /usr/share/tomcat/webapps/raviLogin-1.0.war
-   force_basic_auth: yes
+    url: http://13.59.183.156:8081/artifactory/kranthikey1/1/target/raviLogin-1.0.war
+    dest: /usr/share/tomcat/webapps/raviLogin-1.0.war
+    force_basic_auth: yes
